css/default.less
.content .span4 {
    margin-left: 5px;
    padding-left: 14px;
    border-left: 1px solid #eee;
}

#overview {
    color: #fff;
    background: url('/images/header.jpg');
    padding: 25px 0;
    height: 250px;
}

.subnav {
    margin-bottom: 20px;
    .nav {
        margin-bottom: 0;
    }
}

.centered-text {
    text-align: center;
}

body {
    padding-bottom: 40px;
}

